# graphics-homework

./: .gitignore
color_polygon/: CMakeLists.txt  main.cpp
concentric_rectangles/: CMakeLists.txt  main.cpp
floating_horizon/: index.html  main.js
morphing/: Morphing.cpp
param_curves/: CMakeLists.txt  main.cpp
polygons/: CMakeLists.txt  main.cpp  task.cpp
pythagoras_tree/: index.html  script.js  style.css
raster_algorithms/: CMakeLists.txt  main.cpp
ray_tracing/: CMakeLists.txt  main.cpp  pic.ppm
rays/: rtx1.cpp
task_1_glut/: CMakeLists.txt  main.cpp
task_1_js/: app.js  index.html  style.css
task_8_color_correction/: CImg_demo  CImg_demo.cpp  main  main.cpp
task_8_images/: CMakeLists.txt  main  main.cpp
task_8_images/images/output/: apollo_dither_16x16.ppm  apollo_dither_2x2.ppm  apollo_error_diffusion.ppm  apollo_random_threshold.ppm  apollo_threshold_128.ppm  bird_dither_16x16.ppm  bird_dither_2x2.ppm  bird_error_diffusion.ppm  bird_random_threshold.ppm  bird_threshold_128.ppm  landscape_dither_16x16.ppm  landscape_dither_2x2.ppm  landscape_error_diffusion.ppm  landscape_random_threshold.ppm  landscape_threshold_128.ppm  monument_dither_16x16.ppm  monument_dither_2x2.ppm  monument_error_diffusion.ppm  monument_random_threshold.ppm  monument_threshold_128.ppm  skylight_dither_16x16.ppm  skylight_dither_2x2.ppm  skylight_error_diffusion.ppm  skylight_random_threshold.ppm  skylight_threshold_128.ppm
task_8_ycbcr/: main  main.cpp
warping/: CMakeLists.txt  main.cpp
wire_models/: CMakeLists.txt  main.cpp
